dynamic fixed phase button (most visible sheet)

--- a/src/app/components/page-viewer/overlay/page-interaction-overlay.component.scss
+++ b/src/app/components/page-viewer/overlay/page-interaction-overlay.component.scss
@@ -69,7 +69,7 @@
         text-align: center;
         font-weight: bold;
         transition: filter 0.2s;
-        font-size: 1.1em;
+        font-size: 0.9em;
 
         &.end-phase-button {
             background-color: #f00;
